--- a/ml/css/demo.css
+++ b/ml/css/demo.css
@@ -1,5 +1,5 @@
 @font-face {
-	font-family:Raghu;
+	font-family:Raghu,sans-serif;
 	src: url('../fonts/RaghuMalayalamSans.ttf');
 }
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
